--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Siddhartha Komakula
 description: >
-  Portfolio of Siddhartha Komakula, a Data Analyst with 7+ years of experience in healthcare, finance, and retail.
+ Iam Siddhartha Komakula, a Data Analyst with 7+ years of experience in healthcare, finance, and retail.
   Skilled in SQL, Python, Power BI, Tableau, and cloud technologies. Passionate about data-driven decision making.
 
 baseurl: ""  # leave this blank if you're using isidkoma.github.io
